--- a/.drone.yml
+++ b/.drone.yml
@@ -21,6 +21,11 @@ steps:
       files:
         - index.html
         - data.js
+    when:
+      branch:
+        - master
+      event:
+        - push
 
 node:
   env: cguds-warrior
