--- a/src/benchmark/instrumentation/CMakeLists.txt
+++ b/src/benchmark/instrumentation/CMakeLists.txt
@@ -12,6 +12,11 @@ if (cpu IN_LIST AnyQ_PLATFORMS)
 	target_include_directories(instrumentation_cpu INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/cpu)
 endif()
 
+if (fiberless IN_LIST AnyQ_PLATFORMS)
+	add_library(instrumentation_fiberless INTERFACE)
+	target_link_libraries(instrumentation_fiberless INTERFACE instrumentation_cpu)
+endif()
+
 if (cuda IN_LIST AnyQ_PLATFORMS)
 	add_library(instrumentation_cuda STATIC
 		${CMAKE_CURRENT_SOURCE_DIR}/cuda/CUDA/error.cpp
