split exported plot data into multiple files

--- a/.drone.yml
+++ b/.drone.yml
@@ -20,7 +20,9 @@ steps:
       destination_path: /anyq
       files:
         - index.html
-        - data.js
+        - plot_data/kernel_run_time.js
+        - plot_data/enqueue_time.js
+        - plot_data/dequeue_time.js
         - main.js
     when:
       branch:
