Embed fingerprint to benchmarks in order to identify outdated results

--- a/src/benchmark/CMakeLists.txt
+++ b/src/benchmark/CMakeLists.txt
@@ -39,8 +39,24 @@ set(COMMON_BENCHMARK_FILES
 
 source_group("Source Files" FILES ${COMMON_BENCHMARK_FILES})
 
+find_package(Python3 COMPONENTS Interpreter)
+
+
 function(add_benchmark _target _testfile _mapping)
-	add_anydsl_executable(${_target} ${COMMON_BENCHMARK_FILES} ${COMMON_ARTIC_FILES} "${AnyQ_SOURCE_DIR}/mapping_${_mapping}.art" ${_testfile} ${ARGN})
+	set(_target_fingerprint ${CMAKE_CURRENT_BINARY_DIR}/${_target}-fingerprint.cpp)
+	set(_target_sources
+		$<FILTER:$<TARGET_PROPERTY:${_target},SOURCES>,EXCLUDE,${_target_fingerprint}>
+		$<TARGET_PROPERTY:benchmark_harness_${_mapping},SOURCES>
+		$<TARGET_PROPERTY:instrumentation_${_mapping},SOURCES>
+	)
+	set(FINGERPRINT_COMMAND Python3::Interpreter ${AnyQ_ROOT_DIR}/fingerprint.py -o ${_target_fingerprint})
+	add_custom_command(OUTPUT ${_target_fingerprint}
+		COMMAND ${FINGERPRINT_COMMAND} ${_target_sources}
+		DEPENDS ${_target_sources}
+		COMMENT "Generating fingerprint of ${_target}"
+		WORKING_DIRECTORY ${AnyQ_ROOT_DIR} VERBATIM COMMAND_EXPAND_LISTS
+	)
+	add_anydsl_executable(${_target} ${COMMON_BENCHMARK_FILES} ${COMMON_ARTIC_FILES} "${AnyQ_SOURCE_DIR}/mapping_${_mapping}.art" ${_testfile} ${_target_fingerprint} ${ARGN})
 	set_target_properties(${_target} PROPERTIES FOLDER "benchmarks/${_mapping}" )
 	set(ADDITIONAL_LINK_DEPENDENCY ${ADDITIONAL_LINK_DEPENDENCY_${_mapping}})
 	if(ADDITIONAL_LINK_DEPENDENCY)
@@ -87,10 +103,6 @@ set(BENCHMARK_FILES
 )
 
 option(AnyQ_BENCHMARK_AUTO OFF)
-
-if(AnyQ_BENCHMARK_AUTO)
-	find_package(Python3 COMPONENTS Interpreter)
-endif()
 
 foreach(_platform ${AnyQ_PLATFORMS})
 	if(AnyQ_BENCHMARK_AUTO)
