List missing source file dependencies for instrumentation

--- a/src/benchmark/instrumentation/amdgpu/CMakeLists.txt
+++ b/src/benchmark/instrumentation/amdgpu/CMakeLists.txt
@@ -1,5 +1,6 @@
 
 add_library(instrumentation_amdgpu STATIC
 	${CMAKE_CURRENT_SOURCE_DIR}/instrumentation.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/instrumentation.h
 )
 target_include_directories(instrumentation_amdgpu INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
