--- a/src/benchmark/instrumentation/cpu/CMakeLists.txt
+++ b/src/benchmark/instrumentation/cpu/CMakeLists.txt
@@ -1,5 +1,6 @@
 
 add_library(instrumentation_cpu STATIC
 	${CMAKE_CURRENT_SOURCE_DIR}/instrumentation.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/instrumentation.h
 )
 target_include_directories(instrumentation_cpu INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
