--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,15 @@ if (MSVC)
 	add_compile_definitions(_CRT_SECURE_NO_WARNINGS _SCL_SECURE_NO_WARNINGS)
 endif()
 
+include(CheckIPOSupported)
+check_ipo_supported(RESULT ipo_supported OUTPUT error)
+if( ipo_supported )
+    option(AnyQ_ENABLE_LTO "enable IPO/LTO for all targets" ON)
+    message(STATUS "IPO/LTO: ${AnyQ_ENABLE_LTO}")
+    set(CMAKE_INTERPROCEDURAL_OPTIMIZATION ${AnyQ_ENABLE_LTO})
+else()
+    message(STATUS "IPO/LTO: not supported: <${error}>")
+endif()
 
 find_package(AnyDSL_runtime REQUIRED)
 include_directories(${AnyDSL_runtime_INCLUDE_DIRS})
