--- a/src/benchmark/instrumentation/CMakeLists.txt
+++ b/src/benchmark/instrumentation/CMakeLists.txt
@@ -2,9 +2,7 @@
 
 if (cpu IN_LIST AnyQ_PLATFORMS OR fiberless IN_LIST AnyQ_PLATFORMS)
 	add_subdirectory(cpu)
-
-	add_library(instrumentation_fiberless INTERFACE)
-	target_link_libraries(instrumentation_fiberless INTERFACE instrumentation_cpu)
+	add_library(instrumentation_fiberless ALIAS instrumentation_cpu)
 endif()
 
 if (cuda IN_LIST AnyQ_PLATFORMS OR nvvm IN_LIST AnyQ_PLATFORMS)
@@ -12,8 +10,7 @@ if (cuda IN_LIST AnyQ_PLATFORMS OR nvvm IN_LIST AnyQ_PLATFORMS)
 endif()
 
 if (nvvm IN_LIST AnyQ_PLATFORMS)
-	add_library(instrumentation_nvvm INTERFACE)
-	target_link_libraries(instrumentation_nvvm INTERFACE instrumentation_cuda)
+    add_library(instrumentation_nvvm ALIAS instrumentation_cuda)
 endif()
 
 if (amdgpu IN_LIST AnyQ_PLATFORMS)
