--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -38,11 +38,11 @@ find_package(Boost 1.65 COMPONENTS fiber)
 
 if (Boost_FOUND)
 	find_package(Threads REQUIRED)
-	add_library(fiber-support STATIC fibers.h fibers.cpp)
-	target_include_directories(fiber-support
-		PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
-		PRIVATE ${Boost_INCLUDE_DIRS}
-	)
+	add_library(fiber-support STATIC)
+	target_sources(fiber-support
+		PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/fibers.h
+		PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/fibers.cpp)
+	target_include_directories(fiber-support PRIVATE ${Boost_INCLUDE_DIRS})
 	target_link_libraries(fiber-support PRIVATE ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
 
 	option(AnyQ_VERBOSE OFF)
