Add test-properties.cmake to mark/skip broken tests

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -216,3 +216,5 @@ endif()
 if (AnyQ_FIBER_SUPPORT)
 	add_subdirectory(fiber-test-suite)
 endif()
+
+include(${AnyQ_ROOT_DIR}/test-properties.cmake OPTIONAL)
