add ITS queue benchmark

--- a/src/benchmark/CMakeLists.txt
+++ b/src/benchmark/CMakeLists.txt
@@ -99,10 +99,6 @@ endfunction()
 
 
 
-set(BENCHMARK_FILES
-	${CMAKE_CURRENT_SOURCE_DIR}/benchmark-queue-concurrent.art.in
-)
-
 option(AnyQ_BENCHMARK_AUTO OFF)
 
 foreach(_platform ${AnyQ_PLATFORMS})
@@ -119,11 +115,13 @@ foreach(_platform ${AnyQ_PLATFORMS})
 
 	set_target_properties(benchmark-${_platform} PROPERTIES FOLDER "benchmarks")
 
-	foreach(_benchmark ${BENCHMARK_FILES})
-		generate_benchmarks(${_benchmark} ${CMAKE_CURRENT_SOURCE_DIR}/benchmark-producer-consumer-queue-concurrent-push-pop.art ${_platform} "${queue_types_${_platform}}" "10000;100000;1000000")
-	endforeach()
+	if (${_platform} STREQUAL "cudaits")
+		generate_benchmarks(${CMAKE_CURRENT_SOURCE_DIR}/benchmark-queue-concurrent-its.art.in ${CMAKE_CURRENT_SOURCE_DIR}/benchmark-producer-consumer-queue-concurrent-push-pop.art ${_platform} "${queue_types_${_platform}}" "10000;1000000")
+	else()
+		generate_benchmarks(${CMAKE_CURRENT_SOURCE_DIR}/benchmark-queue-concurrent.art.in ${CMAKE_CURRENT_SOURCE_DIR}/benchmark-producer-consumer-queue-concurrent-push-pop.art ${_platform} "${queue_types_${_platform}}" "10000;1000000")
+	endif()
 
 	if (${_platform} STREQUAL "cuda")
-		generate_benchmarks(${CMAKE_CURRENT_SOURCE_DIR}/benchmark-bwd-comparison.art.in ${CMAKE_CURRENT_SOURCE_DIR}/benchmark-bwd-compare.art "cuda" "BrokerWorkDistributorQueue;BrokerWorkDistributorQueueOrig;BrokerWorkDistributorQueueOrigCUDA" "100000")
+		generate_benchmarks(${CMAKE_CURRENT_SOURCE_DIR}/benchmark-bwd-comparison.art.in ${CMAKE_CURRENT_SOURCE_DIR}/benchmark-bwd-compare.art ${_platform} "BrokerWorkDistributorQueue;BrokerWorkDistributorQueueOrig;BrokerWorkDistributorQueueOrigCUDA" "100000")
 	endif()
 endforeach()
