fix windows build

--- a/src/benchmark/instrumentation/cuda/CMakeLists.txt
+++ b/src/benchmark/instrumentation/cuda/CMakeLists.txt
@@ -15,8 +15,6 @@ add_library(instrumentation_cuda_common STATIC
 	${CMAKE_CURRENT_SOURCE_DIR}/instrumentation.h
 )
 target_include_directories(instrumentation_cuda_common INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
-# sometimes FindCUDAToolkit's `CUDA::cupti` target is broken
-target_include_directories(instrumentation_cuda_common PRIVATE ${CUDA_cupti_INCLUDE_DIR})
 target_link_libraries(instrumentation_cuda_common PUBLIC cuda_utils)
 
 add_library(instrumentation_cuda STATIC
@@ -40,3 +38,8 @@ target_link_libraries(measure_globaltimer_res PUBLIC CUDA::cudart CUDA::cupti)
 set_target_properties(measure_globaltimer_res PROPERTIES
 	CUDA_ARCHITECTURES "61;70;75"
 )
+
+
+# sometimes FindCUDAToolkit's `CUDA::cupti` target is broken
+target_include_directories(instrumentation_cuda_common PRIVATE ${CUDA_cupti_INCLUDE_DIR})
+target_include_directories(measure_globaltimer_res PRIVATE ${CUDA_cupti_INCLUDE_DIR})
